--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tw">
 <head>
   <meta charset="UTF-8">
-  <title>Cal</title>
+  <title>隱私權政策</title>
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="js.js" defer></script>
