--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="tw">
-<head>
-  <meta charset="UTF-8">
-  <title>隱私權政策</title>
-  <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="js.js" defer></script>
-</head>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <body>
-  <p>「助選管家」是由「Roy Mobile」（下稱我們）所經營之APP(下稱本APP)各項服務與資訊。<br />以下是我們的隱私權保護政策，幫助您瞭解本APP所蒐集的個人資料之運用及保護方式。<br />一、隱私權保護政策的適用範圍<br /> （1）請您在於使用本APP服務前，確認您已審閱並同意本隱私權政策所列全部條款，若您不同意全部或部份者，則請勿使用本APP服務。<br /> （2）隱私權保護政策內容，包括我們如何處理您在使用本APP服務時蒐集到的個人識別資料。<br /> （3）隱私權保護政策不適用於本APP以外的相關連結網站，亦不適用於非我們所委託或參與管理之人員。</p>
-<p>二、個人資料的蒐集及使用<br /> （1）本APP並不會蒐集任何有關個人的身份資料。</p>
-<p>三、對外的相關連結<br />本APP上有可能包含其他合作網站或網頁連結，該網站或網頁也有可能會蒐集您的個人資料，不論其內容或隱私權政策為何，皆與本APP 無關，您應自行參考該連結網站中的隱私權保護政策，我們不負任何連帶責任。<br />四、未成年人保護<br />未成年人於註冊或使用本服務而同意本公司蒐集、利用其個人資訊時，應按其年齡由其法定代理人代為或在法定代理人之同意下為之。<br />五、隱私權政策的修訂<br />我們將因應需求擁有隨時修改本隱私權保護政策的權利，當我們做出修改時，會於本APP公告，且自公告日起生效，不再另行通知。</p>
+
+
+IOS bitsearch 下載<br>
+<a href="itms-services://?action=download-manifest&url=https://github.com/ddmxinfra/bitsearch/blob/gh-pages/manifest.plist">bitsearch</a>
+下載完成後, 在「描述檔管理程式」中簽署設定描述檔<br>
+update: 2021/01/25
+
 </body>
 </html>
